load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_binary(
    name = "generate_portable_ruby_checksums",
    srcs = ["generate_portable_ruby_checksums.sh"],
    data = [
        "@buildifier_prebuilt//buildozer",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@cgrindel_bazel_starlib//shlib/lib:fail",
        "@rules_shell//shell/runfiles",
    ],
)

sh_test(
    name = "generate_portable_ruby_checksums_test",
    srcs = ["generate_portable_ruby_checksums_test.sh"],
    data = [
        "testdata/3.4.8",
        "testdata/expected_checksums_output.txt",
        "testdata/jdx_ruby_release_response.json",
        "testdata/jdx_ruby_releases_list.json",
        ":generate_portable_ruby_checksums",
    ],
    deps = [
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
        "@rules_shell//shell/runfiles",
    ],
)

sh_test(
    name = "generate_portable_ruby_checksums_integration_test",
    srcs = ["generate_portable_ruby_checksums_integration_test.sh"],
    data = [
        "testdata/3.4.8",
        "testdata/jdx_ruby_release_response.json",
        ":generate_portable_ruby_checksums",
    ],
    deps = [
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
        "@rules_shell//shell/runfiles",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**/*"]),
    visibility = ["//:__subpackages__"],
)
