load("@rules_ruby//ruby:defs.bzl", "rb_library", "rb_test")

rb_library(
    name = "spec_helper",
    srcs = ["spec_helper.rb"],
    deps = [
        "@bundle",
    ],
)

rb_test(
    name = "hello_world_spec",
    srcs = ["hello_world_spec.rb"],
    args = ["hello_world/spec/hello_world_spec.rb"],
    main = "@bundle//bin:rspec",
    deps = [
        ":spec_helper",
        "//hello_world/lib:hello_world",
    ],
)

rb_test(
    name = "speaker_spec",
    srcs = ["speaker_spec.rb"],
    args = ["hello_world/spec/speaker_spec.rb"],
    main = "@bundle//bin:rspec",
    deps = [
        ":spec_helper",
        "//hello_world/lib:hello_world",
    ],
)
